--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,9 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0"
-nom = "5.1"
+lazy_static = "1.4"
+linefeed = "0.6"
+pest = "2.1"
+pest_derive = "2.1"
+pest-ast = "0.3"
+from-pest = "0.3"
